add rr module
